회원가입 컨트롤러, 글로벌 예외 처리 컨트롤러
* 회원중복예외 커스텀예외로 변경하였음

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -14,5 +14,12 @@ spring:
         default_batch_fetch_size : 100
 
 logging.level :
-  org.hibernate.SQL : debug #logger??
-  org.hibernate.type : trace #?? ???? ??
+  org.hibernate.SQL : debug
+  org.hibernate.type : trace
+
+server:
+  error:
+    include-exception : true
+    include-message : always
+    include-stacktrace : never
+    whitelabel.enabled : true
