--- a/frontend/myreview/package.json
+++ b/frontend/myreview/package.json
@@ -9,7 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-community/checkbox": "^0.5.14",
+    "@react-native-community/datetimepicker": "6.5.2",
+    "@react-navigation/bottom-tabs": "^6.5.6",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
     "expo": "~47.0.12",
@@ -17,8 +20,11 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-date-picker": "^4.2.9",
+    "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0"
+    "react-native-screens": "~3.18.0",
+    "react-navigation-header-buttons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
