--- a/frontend/myreview/package.json
+++ b/frontend/myreview/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.5.6",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
+    "axios": "^1.3.4",
     "expo": "~47.0.12",
     "expo-checkbox": "~2.2.2",
     "expo-status-bar": "~1.4.2",
