--- a/frontend/myreview/package.json
+++ b/frontend/myreview/package.json
@@ -25,7 +25,9 @@
     "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-navigation-header-buttons": "^10.0.0"
+    "react-navigation-header-buttons": "^10.0.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
