--- a/frontend/myreview/package.json
+++ b/frontend/myreview/package.json
@@ -27,7 +27,8 @@
     "react-native-screens": "~3.18.0",
     "react-navigation-header-buttons": "^10.0.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "expo-network": "~5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
