--- a/frontend/myreview/package.json
+++ b/frontend/myreview/package.json
@@ -1,11 +1,10 @@
 {
   "name": "myreview",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -28,7 +27,9 @@
     "react-navigation-header-buttons": "^10.0.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "react-native-svg": "13.4.0",
-    "expo-network": "~5.0.0"
+    "expo-network": "~5.0.0",
+    "expo-splash-screen": "~0.17.5",
+    "expo-dev-client": "~2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
