--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -1,25 +1,44 @@
 spring:
-  datasource :
+  datasource:
     url: jdbc:h2:tcp://localhost/~/myreview
-    username : sa
-    password :
-    driver-class-name : org.h2.Driver
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
 
-  jpa :
-    hibernate :
-      ddl-auto : create
-    properties :
-      hibernate :
-        format_sql : true
-        default_batch_fetch_size : 100
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        format_sql: true
+        default_batch_fetch_size:
 
-logging.level :
-  org.hibernate.SQL : debug
-  org.hibernate.type : trace
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-id: { REST API 키 }
+            client-secret: { Client Secret }
+            redirect-uri: http://localhost:8080/oauth2/code/kakao
+            authorization-grant-type: authorization_code
+            client-authentication-method: POST
+            client-name: Kakao
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+
+
+logging.level:
+  org.hibernate.SQL: debug
+  org.hibernate.type: trace
 
 server:
   error:
-    include-exception : true
-    include-message : always
-    include-stacktrace : never
-    whitelabel.enabled : true
+    include-exception: true
+    include-message: always
+    include-stacktrace: never
+    whitelabel.enabled: true
